Fix blog article title styling to align with the rest of the site styling

--- a/assets/scss/pages/_blog.scss
+++ b/assets/scss/pages/_blog.scss
@@ -28,6 +28,9 @@
   
   h1,
   .article-title {
+    font-size: $font-xxxl;
+    font-weight: 800;
+    color: var(--text-primary);
     margin-bottom: 24px;
     text-align: left;
   }
